[metadata]
name = twitter-lib-for-me
version = attr: twitter_lib_for_me.__version__
license = MIT
description = twitter lib for me
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    tweepy >= 4.4.0
python_requires =
    >= 3.10
packages = find:
